<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.hotellist.HotelListFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sortByTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/sort_by"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/filterScrollView"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:overScrollMode="never"
                android:padding="8dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sortByTextView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/filterRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/defaultFilterRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:background="@drawable/background_filter_radio_button"
                            android:button="@android:color/transparent"
                            android:paddingStart="20dp"
                            android:paddingTop="6dp"
                            android:paddingEnd="20dp"
                            android:paddingBottom="8dp"
                            android:text="@string/without_filters"
                            android:textColor="@drawable/text_color_filter_radio_button" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/closeToCenterFilterRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:background="@drawable/background_filter_radio_button"
                            android:button="@android:color/transparent"
                            android:paddingStart="20dp"
                            android:paddingTop="6dp"
                            android:paddingEnd="20dp"
                            android:paddingBottom="8dp"
                            android:text="@string/close_to_center"
                            android:textColor="@drawable/text_color_filter_radio_button" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/fartherFromCenterFilterRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:background="@drawable/background_filter_radio_button"
                            android:button="@android:color/transparent"
                            android:paddingStart="20dp"
                            android:paddingTop="6dp"
                            android:paddingEnd="20dp"
                            android:paddingBottom="8dp"
                            android:text="@string/farther_from_center"
                            android:textColor="@drawable/text_color_filter_radio_button" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/moreSuitesAvailableFilterRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:background="@drawable/background_filter_radio_button"
                            android:button="@android:color/transparent"
                            android:paddingStart="20dp"
                            android:paddingTop="6dp"
                            android:paddingEnd="20dp"
                            android:paddingBottom="8dp"
                            android:text="@string/moreSuitesAvailable"
                            android:textColor="@drawable/text_color_filter_radio_button" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/lessSuitesAvailableFilterRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:background="@drawable/background_filter_radio_button"
                            android:button="@android:color/transparent"
                            android:paddingStart="20dp"
                            android:paddingTop="6dp"
                            android:paddingEnd="20dp"
                            android:paddingBottom="8dp"
                            android:text="@string/lessSuitesAvailable"
                            android:textColor="@drawable/text_color_filter_radio_button" />

                    </RadioGroup>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/hotelsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/hotels_list"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filterScrollView" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotelsTextView"
                app:shimmer_auto_start="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/item_hotel_shimmer" />

                    <include layout="@layout/item_hotel_shimmer" />

                    <include layout="@layout/item_hotel_shimmer" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hotelsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:overScrollMode="never"
                android:transitionGroup="true"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hotelsTextView" />

            <ProgressBar
                android:id="@+id/loadingHotelsProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>

